# hello-ctf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ctf/: __init__.py
src/ctf/burp/: burp.py  wordlist.py
src/ctf/http/: repeater.py  server.py
src/ctf/shell/: obf.py  run_cmd.py  tcp_shell.py
src/ctf/utils/: __init__.py  local_ip.py  log.py  match.py
tests/: wordlist_PayloadLoader_test.py  wordlist_WordlistLoader_test.py
