[project]
name = "hello-ctf"
version = "0.0.7"
description = "A professional CTF and penetration testing toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.2.0",
    "brotlipy>=0.7.0",
    "psutil>=7.2.2",
    "rich>=15.0.0",
    "xxhash>=3.7.0",
]

[tool.uv.build-backend]
module-name = "ctf"

[project.scripts]
ctf = "ctf:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
]
